After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 647491 - Default sort order wrong in list view
Default sort order wrong in list view
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: Views: List View
0.x.x [obsolete]
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-04-11 19:25 UTC by Pavlos Touboulidis
Modified: 2011-09-07 20:32 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Remove line with "uri" string. (853 bytes, patch)
2011-04-11 19:26 UTC, Pavlos Touboulidis
committed Details | Review

Description Pavlos Touboulidis 2011-04-11 19:25:19 UTC
The default sort order setting does not work as expected when using the list view. Specifically:

Selecting   ->  Sorts by
------------------------
By Size     ->  Name
By Type     ->  Size
By Mod Date ->  Type

etc.

It can easily be reproduced by setting the default sort preference and then navigating to any directory and resetting the view to defaults (View->Reset View to Defaults).

I've tracked it down to "nautilus-list-view.c", function get_default_sort_order. I'm not familiar with the code base but it looks like the attributes array has an extraneous element "uri", causing the function to return wrong strings for the settings enum. Removing the "uri" seems to have fixed it for me.
Comment 1 Pavlos Touboulidis 2011-04-11 19:26:42 UTC
Created attachment 185750 [details] [review]
Remove line with "uri" string.
Comment 2 Cosimo Cecchi 2011-09-07 20:32:14 UTC
Thanks, this looks good. I pushed the patch to git master.