list-view: Fix default sort order.

Removed the extra "uri" element from the sort order mapping array
because the settings enum values were being mapped to the wrong
strings.

https://bugzilla.gnome.org/show_bug.cgi?id=647491