src/nautilus-list-view.c
@@ -171,7 +171,6 @@ get_default_sort_order (NautilusFile *file, gboolean *reversed)
 	const char *attributes[] = {
 		"name", /* is really "manually" which doesn't apply to lists */
 		"name",
-		"uri",
 		"size",
 		"type",
 		"date_modified",
